# souffle-ae

./: .gitattributes  .gitignore  .gitmodules  README.md  asplos24ae.ipynb  convert_onnx_to_mlir.py  iree.md  monitor.ipynb  run_tvm_0.8.sh  sc22ae.ipynb
baseline/: extract_ncu_cuda_kernel_latency.py  extract_ncu_cuda_mem_read.py
baseline/iree/: README.md  iree-202212.Dockerfile  iree.Dockerfile  run_docker_iree.sh
baseline/mindspore/: README.md  apollo-bert-nsys.csv  extract_ncu_cuda_mem_read.py  iree-efficientnet-b0-nsys.csv  iree-resnext_imagenet_101-nsys.csv  iree-swin-transformer-nsys.csv  iree-tf_MMoE_1_100_16_8_2-nsys.csv  mindspore_lstm.py  mindspore_models.patch  run_mindspore.sh  run_ncu_apollo.sh  test.sh  (+1 more)
baseline/rammer/rammer_generated_models/resnext/: CMakeLists.txt  main_test  main_test.cpp  nnfusion_rt.cu  nnfusion_rt.h  shared.cu  shared.h
baseline/rammer/rammer_generated_models/resnext/kernels/: kernel_func_def_0.cu  kernel_func_def_1.cu  kernel_func_def_10.cu  kernel_func_def_11.cu  kernel_func_def_12.cu  kernel_func_def_13.cu  kernel_func_def_14.cu  kernel_func_def_15.cu  kernel_func_def_16.cu  kernel_func_def_17.cu  kernel_func_def_18.cu  kernel_func_def_19.cu  kernel_func_def_2.cu  kernel_func_def_20.cu  kernel_func_def_21.cu  kernel_func_def_22.cu  kernel_func_def_23.cu  kernel_func_def_24.cu  kernel_func_def_25.cu  kernel_func_def_26.cu  kernel_func_def_27.cu  kernel_func_def_28.cu  kernel_func_def_29.cu  kernel_func_def_3.cu  kernel_func_def_30.cu  kernel_func_def_31.cu  kernel_func_def_32.cu  kernel_func_def_33.cu  kernel_func_def_34.cu  kernel_func_def_35.cu  kernel_func_def_36.cu  kernel_func_def_37.cu  kernel_func_def_38.cu  kernel_func_def_39.cu  kernel_func_def_4.cu  kernel_func_def_40.cu  kernel_func_def_41.cu  kernel_func_def_42.cu  kernel_func_def_43.cu  kernel_func_def_44.cu  (+20 more)
docker/: config.cmake  patch_module_bench_tvm_0.8.patch  run_tvm_0.8.sh  souffle-mindspore_models-patch.txt  tvm_0.8.Dockerfile
results/: efficientnet-se-module-latency-ours.eps  response.md
scripts/: build_all_dockers.sh  run_figure6.sh  run_table3.sh  run_table4.sh  run_table5.sh  test.sh
(+288 files in other folders)
